--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
     "lint": "npx eslint --ignore-path .gitignore './src/**/*.ts[x]' './*.js' --fix"
   },
   "dependencies": {
+    "@appandflow/rn-magic-scroll": "^0.1.5",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.5.0",
     "@react-navigation/stack": "^6.1.1",
-    "expo": "^49.0.20",
-    "expo-notifications": "~0.20.1",
-    "expo-secure-store": "~12.3.1",
-    "expo-splash-screen": "~0.20.5",
-    "expo-status-bar": "~1.6.0",
-    "expo-updates": "~0.18.17",
+    "expo": "^50",
+    "expo-notifications": "~0.27.7",
+    "expo-secure-store": "~12.8.1",
+    "expo-splash-screen": "~0.26.5",
+    "expo-status-bar": "~1.11.1",
+    "expo-updates": "~0.24.12",
     "mobx": "^6.0.4",
     "mobx-persist": "^0.4.1",
     "mobx-react": "^7.0.5",
@@ -28,11 +29,12 @@
     "querystring": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.6",
+    "react-native": "0.73.6",
     "react-native-design-utility": "3.0.0",
-    "react-native-gesture-handler": "~2.12.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-reanimated": "~3.6.3",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
