--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.5.0",
     "@react-navigation/stack": "^6.1.1",
+    "date-fns": "^3.6.0",
     "expo": "51.0.2",
     "expo-notifications": "~0.28.1",
     "expo-secure-store": "~13.0.1",
