--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@appandflow/rn-magic-scroll": "^0.1.7",
     "@gorhom/bottom-sheet": "^4.6.1",
     "@react-native-community/datetimepicker": "7.7.0",
+    "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.5.0",
     "@react-navigation/stack": "^6.1.1",
