--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "template-expo-managed-flow",
+  "name": "projetmobile",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -30,7 +30,6 @@
     "mobx-persist": "^0.4.1",
     "mobx-react": "^7.0.5",
     "mobx-react-lite": "^3.1.6",
-    "querystring": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
