--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/stack": "^6.1.1",
     "date-fns": "^3.6.0",
     "expo": "51.0.2",
+    "expo-linear-gradient": "~13.0.2",
     "expo-notifications": "~0.28.1",
     "expo-secure-store": "~13.0.1",
     "expo-splash-screen": "~0.27.4",
@@ -38,8 +39,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
-    "expo-linear-gradient": "~13.0.2"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
