--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "npx eslint --ignore-path .gitignore './src/**/*.ts[x]' './*.js' --fix"
   },
   "dependencies": {
-    "@appandflow/rn-magic-scroll": "^0.1.10",
+    "@appandflow/rn-magic-scroll": "^0.1.11",
     "@gorhom/bottom-sheet": "^4.6.1",
     "@react-native-community/datetimepicker": "7.7.0",
     "@react-navigation/drawer": "^6.6.15",
@@ -39,7 +39,9 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "typescript": "^4.9.4",
+    "@types/react": "~18.0.27"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
