--- a/package.json
+++ b/package.json
@@ -12,35 +12,35 @@
     "lint": "npx eslint --ignore-path .gitignore './src/**/*.ts[x]' './*.js' --fix"
   },
   "dependencies": {
-    "@appandflow/rn-magic-scroll": "^0.1.11",
+    "@appandflow/react-native-magic-scroll": "^0.1.14",
     "@gorhom/bottom-sheet": "^4.6.1",
-    "@react-native-community/datetimepicker": "7.7.0",
+    "@react-native-community/datetimepicker": "8.0.1",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.5.0",
     "@react-navigation/stack": "^6.1.1",
+    "@types/react": "~18.0.27",
     "date-fns": "^3.6.0",
-    "expo": "51.0.2",
+    "expo": "~51.0.11",
     "expo-linear-gradient": "~13.0.2",
-    "expo-notifications": "~0.28.1",
+    "expo-notifications": "~0.28.7",
     "expo-secure-store": "~13.0.1",
-    "expo-splash-screen": "~0.27.4",
+    "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
-    "expo-updates": "~0.25.11",
+    "expo-updates": "~0.25.16",
     "mobx": "^6.0.4",
     "mobx-persist": "^0.4.1",
     "mobx-react": "^7.0.5",
     "mobx-react-lite": "^3.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.1",
+    "react-native": "0.74.2",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
-    "typescript": "^4.9.4",
-    "@types/react": "~18.0.27"
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
