--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "prettier": "^2.1.2",
-    "typescript": "~5.3.3"
+    "typescript": "5.4.5"
   },
   "private": true
 }
