--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@react-navigation/stack": "^6.1.1",
     "@types/react": "~18.0.27",
     "date-fns": "^3.6.0",
-    "expo": "~51.0.11",
+    "expo": "^51.0.0",
     "expo-linear-gradient": "~13.0.2",
     "expo-notifications": "~0.28.7",
     "expo-secure-store": "~13.0.1",
@@ -52,7 +52,7 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "prettier": "^2.1.2",
-    "typescript": "5.4.5"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
