--- a/package.json
+++ b/package.json
@@ -14,31 +14,31 @@
   "dependencies": {
     "@appandflow/react-native-magic-scroll": "^0.1.21",
     "@gorhom/bottom-sheet": "^4.6.1",
-    "@react-native-community/datetimepicker": "8.0.1",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.5.0",
     "@react-navigation/stack": "^6.1.1",
-    "@types/react": "~18.0.27",
+    "@types/react": "~18.3.12",
     "date-fns": "^3.6.0",
-    "expo": "^51.0.0",
-    "expo-linear-gradient": "~13.0.2",
-    "expo-notifications": "~0.28.7",
-    "expo-secure-store": "~13.0.1",
-    "expo-splash-screen": "~0.27.5",
-    "expo-status-bar": "~1.12.1",
-    "expo-updates": "~0.25.16",
+    "expo": "^52.0.0",
+    "expo-linear-gradient": "~14.0.2",
+    "expo-notifications": "~0.29.14",
+    "expo-secure-store": "~14.0.1",
+    "expo-splash-screen": "~0.29.22",
+    "expo-status-bar": "~2.0.1",
+    "expo-updates": "~0.27.4",
     "mobx": "^6.0.4",
     "mobx-persist": "^0.4.1",
     "mobx-react": "^7.0.5",
     "mobx-react-lite": "^3.1.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.2",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "4.4.0",
     "react-native-web": "~0.19.10",
     "typescript": "^4.9.4"
   },
